{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 75,
  "lineage": "11d82ec8-ebfd-f741-862e-4dee435769dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:security-group/sg-0179a25b723a4b30f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0179a25b723a4b30f",
            "ingress": [],
            "name": "terraform-eks-cluster",
            "name_prefix": "",
            "owner_id": "719950930480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:internet-gateway/igw-03520419a0c2dd318",
            "id": "igw-03520419a0c2dd318",
            "owner_id": "719950930480",
            "tags": {
              "Name": "vpc-module-demo"
            },
            "tags_all": {
              "Name": "vpc-module-demo"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03520419a0c2dd318",
            "id": "r-rtb-0aec264fedacb10c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aec264fedacb10c9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:route-table/rtb-09c262656b2e8e2ac",
            "id": "rtb-09c262656b2e8e2ac",
            "owner_id": "719950930480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:route-table/rtb-00c73f3774f8d70cd",
            "id": "rtb-00c73f3774f8d70cd",
            "owner_id": "719950930480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:route-table/rtb-079fe4fbb398c1198",
            "id": "rtb-079fe4fbb398c1198",
            "owner_id": "719950930480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:route-table/rtb-0aec264fedacb10c9",
            "id": "rtb-0aec264fedacb10c9",
            "owner_id": "719950930480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module-demo-public"
            },
            "tags_all": {
              "Name": "vpc-module-demo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f78ede3c689075",
            "route_table_id": "rtb-09c262656b2e8e2ac",
            "subnet_id": "subnet-023a1c1e73529c3c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e3358bfc57c01eb",
            "route_table_id": "rtb-00c73f3774f8d70cd",
            "subnet_id": "subnet-03d04973de595215a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5a2c70198e38b58",
            "route_table_id": "rtb-079fe4fbb398c1198",
            "subnet_id": "subnet-05353e797cdd07c26"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aa4a3410d43492c",
            "route_table_id": "rtb-0aec264fedacb10c9",
            "subnet_id": "subnet-0b7acd999ae0e732f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d400a3a1abfc5a4",
            "route_table_id": "rtb-0aec264fedacb10c9",
            "subnet_id": "subnet-0eca9e784e0970b49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa516245ace15fa6",
            "route_table_id": "rtb-0aec264fedacb10c9",
            "subnet_id": "subnet-0687fb22140212c4d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-023a1c1e73529c3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023a1c1e73529c3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1a"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-03d04973de595215a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d04973de595215a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1b"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-05353e797cdd07c26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05353e797cdd07c26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-module-demo-private-us-east-1c"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-0b7acd999ae0e732f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7acd999ae0e732f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-module-demo-public-us-east-1a"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-0eca9e784e0970b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca9e784e0970b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-module-demo-public-us-east-1b"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:subnet/subnet-0687fb22140212c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0687fb22140212c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "719950930480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module-demo-public-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-module-demo-public-us-east-1c"
            },
            "vpc_id": "vpc-038fe205082d1d708"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:719950930480:vpc/vpc-038fe205082d1d708",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b33fd610e11b9d13",
            "default_route_table_id": "rtb-098f2476b24d5c8b0",
            "default_security_group_id": "sg-0c973eaca5f781802",
            "dhcp_options_id": "dopt-018652a70f092439b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-038fe205082d1d708",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098f2476b24d5c8b0",
            "owner_id": "719950930480",
            "tags": {
              "Name": "vpc-module-demo"
            },
            "tags_all": {
              "Name": "vpc-module-demo"
            }
          }
        }
      ]
    }
  ]
}